Ajuste e add swagger